-Add "Insert Flash" option (Note: Flash needs to be installed on your system
 for this to work) (requested by Gnome).
-Added support for video files under Windows (contrary to Linux, they will
 play in an external window using mplayer).
-When you have both tags "A" and "A::B", the card browser will now show the
 first tag as "A::Untagged".
-javascript can not contain line breaks (reported by iBayer and gnome).
-In 'edit cards', make more robust of no longer warning about discarding
 changes if you did not make any.
-Sped up deleting of large number of cards from the card browser.
-When pasting into the "Add cards" or "Edit cards" dialog, respect the
 formatting of the card field.
-Be more robust against importing three-sided 1.x cards with missing
 information (reported by Chris Resnik).
-Bug fix involving notes with multiple lines with exporting cards.
-Better support for non-latin characters in sound files under Windows (reported
 by Raoul Pontecaille).
-Fix crash in 'Compact database' involving too many open files (reported by
 Pawel Szerszon).
-Changing card types and deleting cards from the card browser is now faster.
-No longer convert filenames to lower case on Windows (requested by Michael
 Campbell).
-Fix another crash involving duplicates while converting cards (reported by
 Gnome).
-Fix displaying non-latin characters in statistics (reported by Pawel Szerszon).
-Don't erase fields when cancelling a card type conversion (reported by Gnome).
-Don't allow cancelling the import metadata information dialog.
-Fix harmless error message when converting to Cloze cards in the card browser
 (reported by Michael Campbell).
-Upgraded to lastest version of Qt/PyQt.


Mnemosyne 2.1 : 2012-09-10

-New import/export format to share cards, which also bundles the media files.
 Supports importing an updated version of the same exported cards, so that
 authors can release updated versions of their cards fixing e.g. spelling
 mistakes.