@@ -18,7 +18,7 @@ before installing the new one.)
  play in an external window using mplayer).
 -When you have both tags "A" and "A::B", the card browser will now show the
  first tag as "A::Untagged".
--javascript can not contain line breaks (reported by iBayer and gnome).
+-javascript can now contain line breaks (reported by iBayer and gnome).
 -In 'edit cards', make more robust of no longer warning about discarding
  changes if you did not make any.
 -Sped up deleting of large number of cards from the card browser.
@@ -27,6 +27,7 @@ before installing the new one.)
 -Be more robust against importing three-sided 1.x cards with missing
  information (reported by Chris Resnik).
 -Bug fix involving notes with multiple lines with exporting cards.
+-Fix bug with picture sometimes not showing when first starting the program.
 -Better support for non-latin characters in sound files under Windows (reported
  by Raoul Pontecaille).
 -Fix crash in 'Compact database' involving too many open files (reported by
@@ -41,7 +42,7 @@ before installing the new one.)
 -Don't allow cancelling the import metadata information dialog.
 -Fix harmless error message when converting to Cloze cards in the card browser
  (reported by Michael Campbell).
--Upgraded to lastest version of Qt/PyQt.
+-Upgraded to latest version of Qt/PyQt.
 
 
 Mnemosyne 2.1 : 2012-09-10
